--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.url=jdbc:postgresql://localhost:5432/RoomReservation
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
