--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.datasource.url=jdbc:postgresql://localhost:5432/RoomReservation
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/RoomReservation
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.flyway.enabled = true
+spring.flyway.locations =classpath:db/migration 
